i added html forms to the code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
     <title>My first webpage</title>
 </head>
 <body>
-    <h1>Hi this is my first website</h1>
+    <p><strong>Hi</strong> this <small>is my</small> first <em>website!</em></p>
+<h1>Learning coding is actually more fun than i imagined</h1>
+<h2>Learning coding is actually more fun than i imagined</h2>
+<h3>Learning coding is actually more fun than i imagined</h3>
+<h4>Learning coding is actually more fun than i imagined</h4>
+<h5>Learning coding is actually more fun than i imagined</h5>
+<h6>Learning coding is actually more fun than i imagined</h6>
+
+
+<form>
+    <label for="username">Enter username</label>
+    <input type="text" id="username" name="username">
+     <br></br>
+<label for="email">Enter email</label>
+    <input type="email" id="email" name="email">
+     <br></br>
+<label for="password">Enter password</label>
+    <input type="password" id="password" name="password">
+
+<p>Select your age</p>
+<input type="radio" name="age" value="0-25" id="option-1">
+ <label for="option-1">0-25</label>
+<input type="radio" name="age" value="26-50" id="option-2">
+ <label for="option-2">26-50</label> 
+<input type="radio" name="age" value="51+" id="option-3">
+ <label for="option-3">51+</label>
+
+    <label for="">security question</label>
+    
+
+
+
+
+</form>
 </body>
 </html>
