--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
 
 <html lang="en">
 <head>
+    
+<link rel="stylesheet" href="styles.css">
+</style>
     <title>My first webpage</title>
 </head>
 <body>
     <p><strong>Hi</strong> this <small>is my</small> first <em>website!</em></p>
 <h1>Learning coding is actually more fun than i imagined</h1>
-<h2>Learning coding is actually more fun than i imagined</h2>
-<h3>Learning coding is actually more fun than i imagined</h3>
-<h4>Learning coding is actually more fun than i imagined</h4>
-<h5>Learning coding is actually more fun than i imagined</h5>
-<h6>Learning coding is actually more fun than i imagined</h6>
+<h1>Learning coding is actually more fun than i imagined</h1>
+<h1>Learning coding is actually more fun than i imagined</h1>
+<h1>Learning coding is actually more fun than i imagined</h1>
+<h1>Learning coding is actually more fun than i imagined</h1>
+<h1>Learning coding is actually more fun than i imagined</h1>
 
 
 <form>
     <label for="username">Enter username</label>
-    <input type="text" id="username" name="username">
+    <input type="text" id="username" name="username"placeholder="username" required>
      <br></br>
 <label for="email">Enter email</label>
-    <input type="email" id="email" name="email">
+    <input type="email" id="email" name="email"placeholder="email" required>
      <br></br>
 <label for="password">Enter password</label>
-    <input type="password" id="password" name="password">
+    <input type="password" id="password" name="password"placeholder="password" required>
 
 <p>Select your age</p>
 <input type="radio" name="age" value="0-25" id="option-1">
@@ -34,10 +37,22 @@
  <label for="option-3">51+</label>
 
     <label for="">security question</label>
-    
+<select name="questions" id="questions">
+   <option value="q1">What colour are your favourite pair of socks</option>
+   <option value="q2">If you could be a vegetable what would it be</option>
+   <option value="q3">What is your best ever security question</option>
+   <br></br>
+    <label for="answer">security questions:</label>
+</select>
+<br><br>
+<label for="answer">Security question answers</label>
+<input type="text" id="answer" name="answer">
 
 
-
+<br><br>
+<label for="Bio">Your Bio</label><br>
+<textarea name="Bio" id="Bio" cols="30" rows="10" placeholder="about you..."></textarea><br><br> required
+<input type="submit" value="submit the form">
 
 </form>
 </body>
