--- a/index.html
+++ b/index.html
@@ -1,59 +1,48 @@
 <!DOCTYPE html>
 
-
-<html lang="en">
+<html>
 <head>
-    
-<link rel="stylesheet" href="styles.css">
-</style>
-    <title>My first webpage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles.css">
+  <title>Marioclub</title>
 </head>
 <body>
-    <p><strong>Hi</strong> this <small>is my</small> first <em>website!</em></p>
-<h1>Learning coding is actually more fun than i imagined</h1>
-<h1>Learning coding is actually more fun than i imagined</h1>
-<h1>Learning coding is actually more fun than i imagined</h1>
-<h1>Learning coding is actually more fun than i imagined</h1>
-<h1>Learning coding is actually more fun than i imagined</h1>
-<h1>Learning coding is actually more fun than i imagined</h1>
-
-
-<form>
-    <label for="username">Enter username</label>
-    <input type="text" id="username" name="username"placeholder="username" required>
-     <br></br>
-<label for="email">Enter email</label>
-    <input type="email" id="email" name="email"placeholder="email" required>
-     <br></br>
-<label for="password">Enter password</label>
-    <input type="password" id="password" name="password"placeholder="password" required>
-
-<p>Select your age</p>
-<input type="radio" name="age" value="0-25" id="option-1">
- <label for="option-1">0-25</label>
-<input type="radio" name="age" value="26-50" id="option-2">
- <label for="option-2">26-50</label> 
-<input type="radio" name="age" value="51+" id="option-3">
- <label for="option-3">51+</label>
-
-    <label for="">security question</label>
-<select name="questions" id="questions">
-   <option value="q1">What colour are your favourite pair of socks</option>
-   <option value="q2">If you could be a vegetable what would it be</option>
-   <option value="q3">What is your best ever security question</option>
-   <br></br>
-    <label for="answer">security questions:</label>
-</select>
-<br><br>
-<label for="answer">Security question answers</label>
-<input type="text" id="answer" name="answer">
-
-
-<br><br>
-<label for="Bio">Your Bio</label><br>
-<textarea name="Bio" id="Bio" cols="30" rows="10" placeholder="about you..."></textarea><br><br> required
-<input type="submit" value="submit the form">
-
-</form>
+  <header>
+    <h1>Marioclub</h1>
+  </header>
+  <section class="banner">
+  <img src="img/banner.png" alt="Marioclub Welcome Banner">
+    <div class="welcome">
+      <h2>Welcome to <br><span>Marioclub</span></h2>
+    </div>
+  </section>
+  <nav class="main-nav">
+    <ul>
+      <li><a href="/join.html" class="join">Join the club</a></li>
+      <li><a href="/news.html">Latest news</a></li>
+      <li><a href="/games.html">New games</a></li>
+      <li><a href="/contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <article>
+      <h2>It's a me, Mario</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae possimus sapiente, ducimus asperiores error eum ipsam quasi repellendus iste earum laboriosam nesciunt officiis atque rerum quos incidunt aspernatur velit voluptates. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. Repudiandae autem maxime magnam eveniet! Atque, suscipit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. Repudiandae autem maxime magnam eveniet! Atque, suscipit amet.</p>
+    </article>
+    <ul class="images">
+      <li><img src="img/thumb-1.png" alt="mario thumbnail 1"></li>
+      <li><img src="img/thumb-2.png" alt="mario thumbnail 2"></li>
+    </ul>
+  </main>
+  <section class="join">
+    <h2>Join Today!</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis dignissimos minus voluptatem.</p>
+    <form>
+      <input type="email" name="email" placeholder="Type email & hit enter" required>
+    </form>
+  </section>
+  <footer>
+    <p class="copyright">Copyright 2019 Marioclub</p>
+  </footer>
 </body>
 </html>
