--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="main.css">
   <title>Marioclub</title>
 </head>
 <body>
@@ -18,16 +18,16 @@
   </section>
   <nav class="main-nav">
     <ul>
-      <li><a href="/join.html" class="join">Join the club</a></li>
-      <li><a href="/news.html">Latest news</a></li>
-      <li><a href="/games.html">New games</a></li>
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a href="join.html" class="join">Join the club</a></li>
+      <li><a href="news.html">Latest news</a></li>
+      <li><a href="games.html">New games</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   <main>
     <article>
       <h2>It's a me, Mario</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae possimus sapiente, ducimus asperiores error eum ipsam quasi repellendus iste earum laboriosam nesciunt officiis atque rerum quos incidunt aspernatur velit voluptates. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. Repudiandae autem maxime magnam eveniet! Atque, suscipit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. Repudiandae autem maxime magnam eveniet! Atque, suscipit amet.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> possimus sapiente, ducimus asperiores error eum ipsam quasi repellendus iste earum laboriosam nesciunt officiis atque rerum quos incidunt aspernatur velit voluptates. <br> ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. <br> autem maxime magnam eveniet! Atque, suscipit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. <br> autem maxime magnam eveniet! Atque, suscipit amet.</p>
     </article>
     <ul class="images">
       <li><img src="img/thumb-1.png" alt="mario thumbnail 1"></li>
