--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
   <title>Marioclub</title>
 </head>
+
 <body>
   <header>
     <h1>Marioclub</h1>
   </header>
   <section class="banner">
-  <img src="img/banner.png" alt="Marioclub Welcome Banner">
+    <img src="img/banner.png" alt="Marioclub Welcome Banner">
     <div class="welcome">
       <h2>Welcome to <br><span>Marioclub</span></h2>
     </div>
   </section>
   <nav class="main-nav">
     <ul>
-      <li><a href="join.html" class="join">Join the club</a></li>
+      <li><a href="joim.html" class="join">Join the club</a></li>
       <li><a href="news.html">Latest news</a></li>
       <li><a href="games.html">New games</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li> 
     </ul>
   </nav>
   <main>
     <article>
       <h2>It's a me, Mario</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> possimus sapiente, ducimus asperiores error eum ipsam quasi repellendus iste earum laboriosam nesciunt officiis atque rerum quos incidunt aspernatur velit voluptates. <br> ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. <br> autem maxime magnam eveniet! Atque, suscipit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. <br> autem maxime magnam eveniet! Atque, suscipit amet.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> possimus sapiente, ducimus asperiores error eum
+        ipsam quasi repellendus iste earum laboriosam nesciunt officiis atque rerum quos incidunt aspernatur velit
+        voluptates. <br> ipsum, dolor sit amet consectetur adipisicing elit. Praesentium labore perferendis minus
+        incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt consequatur. <br> autem maxime
+        magnam eveniet! Atque, suscipit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium
+        labore perferendis minus incidunt doloribus, eligendi repudiandae earum dignissimos est neque deserunt
+        consequatur. <br> autem maxime magnam eveniet! Atque, suscipit amet.</p>
     </article>
     <ul class="images">
       <li><img src="img/thumb-1.png" alt="mario thumbnail 1"></li>
@@ -36,13 +44,11 @@
   </main>
   <section class="join">
     <h2>Join Today!</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis dignissimos minus voluptatem.</p>
-    <form>
-      <input type="email" name="email" placeholder="Type email & hit enter" required>
-    </form>
+    <p><strong> ipsum dolor, sit amet consectetur adipisicing elit. Corporis dignissimos minus voluptatem.</strong></p>
   </section>
   <footer>
     <p class="copyright">Copyright 2019 Marioclub</p>
   </footer>
 </body>
+
 </html>
