--- a/joim.html
+++ b/joim.html
@@ -21,7 +21,7 @@
 
     <header>
         <section class="sign-up">
-            <h1>WELCOME TO MARIO CLUB</h1>
+            <h1>MARIO CLUB</h1>
         </section>
     </header>
     <!-- <br>
