--- a/joim.html
+++ b/joim.html
@@ -34,14 +34,18 @@
     <br> -->
 
     <div class="login">
-       <form>
-        <h2>LOG IN</h2>
-        <label for="text">Username</label>
-        <input type="text">
-        <label for="Password">Enter Password</label>
-        <input type="Password">
-        <button>Submit</button>
-       </form>
+        <form>
+            <h2>LOG IN</h2>
+            <label for="text">Username</label>
+            <input type="text">
+            <label for="Password">Enter Password</label>
+            <input type="Password">
+            <div class="checkbox">
+                <label for="checkbox">Remember me</label>
+                <input type="checkbox">
+            </div>
+            <button>Submit</button>
+        </form>
     </div>
 
 
