--- a/joim.html
+++ b/joim.html
@@ -41,8 +41,8 @@
             <label for="Password">Enter Password</label>
             <input type="Password">
             <div class="checkbox">
-                <label for="checkbox">Remember me</label>
-                <input type="checkbox">
+               <span> Remember me</span>
+                <input type="checkbox" style="margin: 0;">
             </div>
             <button>Submit</button>
         </form>
