added a sign up page

--- a/signup.html
+++ b/signup.html
@@ -18,42 +18,31 @@
 </head>
 
 <body>
-
     <header>
-        <section class="LOGIN">
+        <section class="signup">
             <h1>MARIO CLUB</h1>
         </section>
     </header>
-    <!-- <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br> -->
-
     <div class="login">
         <form>
-            <h2>LOG IN</h2>
-            <label for="text">Username</label>
+            <h2>sign-up</h2>
+            <label for="text">Enter Fullname</label>
             <input type="text">
-            <label for="Password">Enter Password</label>
+            <label for="date">Date of Birth</label>
+            <input type="date">
+            <label for="text">Favourite Game</label>
+            <input type="text">
+            <label for="password">Enter password</label>
+            <input type="password">
+            <label for="Password">Confirm Password</label>
             <input type="Password">
             <div class="checkbox">
                 <span> Remember me</span>
                 <input type="checkbox" style="margin: 0;">
             </div>
-            <button>Submit</button>
-            <div class="sign-up">
-                <p>Don't have an account
-                <p><a href="signup.html" class="sign-up">sign-up</a></p>
-            </div>
+            <button>Create Account</button>
         </form>
     </div>
-
-
-
-
 </body>
+
 </html>
