--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
     </header>
     <div class="login">
         <form>
-            <h2>sign-up</h2>
+            <h2>SIGN UP</h2>
             <label for="text">Enter Fullname</label>
             <input type="text">
             <label for="date">Date of Birth</label>
