made corrections to the responsive code

--- a/signup.html
+++ b/signup.html
@@ -19,11 +19,9 @@
 
 <body>
     <header>
-        <section class="signup">
             <h1>MARIO CLUB</h1>
-        </section>
     </header>
-    <div class="login">
+    <div class="signup">
         <form>
             <h2>SIGN UP</h2>
             <label for="text">Enter Fullname</label>
